# sordine

./: .gitignore  CONTRIBUTING.md  README.md  bmk.py  environment.yml  pyproject.toml  requirements.txt  sedov.py
.github/workflows/: python-package.yml  ruff.yml
src/: bmk.py  matplotlibrc  plot_sedov.py  radeq.py  sedov.py  test.py
src/sordine/: __init__.py
