[project]
name = "sordine"
version = "0.1.0"
description = "SOftwaRe valiDatIoN suitE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.14.1",
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
